--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "connect-redis": "^9.0.0",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
     "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
+    "redis": "^5.8.2",
     "uuid": "^9.0.1"
   }
 }
