--- a/package.json
+++ b/package.json
@@ -1,28 +1,23 @@
 {
-  "name": "alugabv",
+  "name": "site-imoveis",
   "version": "1.0.0",
-  "private": true,
+  "description": "Site de aluguel de imóveis",
+  "main": "server.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "Seu Nome",
+  "license": "ISC",
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
-    "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "leaflet": "^1.9.4",
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^9.0.0",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "express-session": "^1.18.0",
+    "multer": "^1.4.5-lts.1",
+    "redis": "^5.8.2",
     "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "typescript": "^5",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3"
   }
 }
