--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
     "redis": "^5.8.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "pg": "^8.11.3",
+    "pg-pool": "^3.6.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
