--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 SESSION_SECRET=8f7d3b1e9c6a0f2e4d5b8a7c9e6f3d0b2a5c8f1e4b7d0a9
 
 # URL de conexão com o banco de dados
-DATABASE_URL=postgresql://alugabv_user:CZl5Dj4Vlf35NB0pzdthfdTO8PqLL7CU@dpg-d2on4v95pdvs73cqplig-a/alugabv
+DATABASE_URL=postgresql://alugabv_user:CZl5Dj4Vlf35NB0pzdthfdTO8PqLL7CU@dpg-d2on4v95pdvs73cqplig-a.oregon-postgres.render.com/alugabv
 
 # Porta em que o servidor irá rodar
 PORT=3000
