--- a/package.json
+++ b/package.json
@@ -12,15 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "connect-redis": "^9.0.0",
+    "connect-pg-simple": "^9.0.1",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
-    "redis": "^5.8.2",
-    "uuid": "^9.0.1",
     "pg": "^8.11.3",
-    "pg-pool": "^3.6.1"
+    "uuid": "^9.0.1"
   },
   "engines": {
     "node": ">=18.0.0"
