--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # Dependências do Node
-node_modules
+node_modules/
 
 
 # Dados locais e uploads (não devem ser versionados)
 db.json
 users.json
-/uploads/
+uploads/
 
 # Variáveis de ambiente
 .env
