--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ DATABASE_URL=sua_url_do_postgres
 # Ambiente em que o Node.js está rodando
 NODE_ENV=production
 
-# Porta em que o servidor irá rodar
-PORT=3000
+# Configurações do Cloudinary
+CLOUDINARY_URL=cloudinary://seu_api_key:seu_api_secret@seu_cloud_name
