--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.7.0",
     "connect-pg-simple": "^9.0.1",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
