--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 SESSION_SECRET=sua_chave_secreta_aqui
 
 # URL de conexão com o banco de dados
-DATABASE_URL=sua_url_do_postgres
+DATABASE_URL=postgresql://postgres:sua_senha@localhost:5432/alugabv
 
 # Ambiente em que o Node.js está rodando
-NODE_ENV=production
+NODE_ENV=development
 
 # Configurações do Cloudinary
 CLOUDINARY_URL=cloudinary://seu_api_key:seu_api_secret@seu_cloud_name
