--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
     "connect-redis": "^9.0.0",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
     "redis": "^5.8.2",
     "uuid": "^9.0.1"
   }
