--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
+    "connect-pg-simple": "^10.0.0",
     "connect-redis": "^9.0.0",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
