--- a/.env.example.txt
+++ b/.env.example.txt
@@ -3,3 +3,6 @@ PORT=3000
 
 # Segredo para assinar os tokens/sessões (use um valor longo e aleatório)
 SESSION_SECRET=seu_segredo_super_secreto_aqui_com_pelo_menos_32_caracteres
+
+# (Opcional) Defina o nome de usuário exato de um usuário existente para torná-lo um moderador global.
+MODERATOR_USERNAME=
