--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
   "author": "Seu Nome",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^4.0.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
-    "connect-pg-simple": "^10.0.0",
-    "connect-redis": "^9.0.0",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
+    "connect-pg-simple": "^9.0.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
-    "pg": "^8.11.3",
-    "redis": "^5.8.2",
+    "pg": "^8.12.0",
     "uuid": "^9.0.1"
   }
 }
