--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "express-rate-limit": "^7.3.1"
   }
 }
